# fastp

./: CMakeLists.txt
src/: fastqreader.cpp  filter.cpp  filter.h  peprocessor.cpp  readpool.cpp  seprocessor.cpp
src/sdust/: sdust.c  sdust.h
